
 * All IIS functions.
 * `Disable-FirewallStatefulFtp`
 * `Enable-FirewallStatefulFtp`
 * `Install-Service`
 * `Install-SmbShare`
 * `Remove-SslCertificateBinding`
 * `Set-SslCertificateBinding`

The following functions' internal behavior has changed. This may or may not impact you.

 * `Grant-Permission` now only grants permissions on an object if those permissions aren't present.  To preserve previous behavior, add the `-Force` switch to all `Grant-Permission` usages.
 * `Grant-Permission` now writes an error if you don't have access to a private key. Previously, it would skip the key without any messages.
 * `Install-Msi` (fka `Invoke-WindowsInstaller`) now only installs the MSI if it isn't already installed. To preserve the previous behavior and always install, add the `-Force` switch to all `Invoke-WindowsInstaller`\`Install-Msi` usages.
 * All IIS functions were re-written to use the `Microsoft.Web.Administration` API instead of `appcmd.exe`.
 * `Install-IisWebsite` no longer deletes and re-creates websites. If a website exists, it updates its configuration to match parameters passed in. To preserve previous behavior and delete the website before installing, use the `-Force` switch.
 * `Install-IisVirtualDirectory` no longer deletes and re-creates virtual directories. If a virtual directory exists, its configuration is updated in place. To preserve previous behavior and delete the virtual directory before installing, use the `Force` switch.
 * `Install-FileShare` (fka `Install-SmbShare`) no longer deletes and re-creates the share, instead it modifies existing shares in place. To preserve previous behavior and delete existing shares before re-creating, use the `Force` switch.
 * `Set-RegistryKeyValue` only sets the value if the value doesn't exist or the current value is different than the desired value.
